Se agrego texto al body del archivo index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ es html:5-->
     <title>Coders</title>  <!--Este es el nombre que va a aparecer en la pestaña-->
 </head>
 <body>
-    
+    <h1>Este es el sitio web de los futuros programadores mas grandes del mundoo!!!</h1>
 </body>
 </html>
