--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ es html:5-->
 </head>
 <body>
     <h1>Este es el sitio web de los futuros programadores mas grandes del mundoo!!!</h1>
+    <p>Y de un gran equipo !!</p>
 </body>
 </html>
