Se agrego carpeta multimedia en la cual se agrego una imagen ilustrativa utilizada en el index.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@ es html:5-->
 <body>
     <h1>Este es el sitio web de los futuros programadores mas grandes del mundoo!!!</h1>
     <p>Y de un gran equipo !!</p>
+    <img src="C:\Users\nicoj\OneDrive\Escritorio\coderss\archivos multimedia\imagen1.jpg" height="400px" width="800px" alt="Imagen con codigo"/>
+    <br>
+    <a href="https://www.youtube.com/watch?v=H6e19XoihBo" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/128/3670/3670147.png" height="100px" width="100px" alt="Logo de youtube"/>
+    </a>
 </body>
 </html>
