--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@ es html:5-->
     <a href="https://www.youtube.com/watch?v=H6e19XoihBo" target="_blank">
 <img src="https://cdn-icons-png.flaticon.com/128/3670/3670147.png" height="100px" width="100px" alt="Logo de youtube"/>
     </a>
+    <form method="post" action="backend/form.php">
+        <input type="date" name="username" />
+
+    </form>
 </body>
 </html>
